fixed default resource for plugin on files inside sub-folders